Subiendo abstracciones en lugar de implementaciones